# miniapp_solver

./: .gitignore  CMakeLists.txt
cmake/: FindPETSc.cmake
gko-config/: bicgstab.json  cg.json  cg_schwartz.json  ilu-gmres.json  ir.json  mixed-pgm-multigrid-cg.json  pgm-multigrid-cg.json
src/: config.hpp.in  gko_solver_miniapp.cpp  petsc_solver_miniapp.cpp
